--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@
         font-family: 'Yuji Boku', serif;
       }
     </style>
-    <h1>The main page is still in development check in again later</h1>
+    <h1>The main page is still in development check in again later.</h1>
   </body>
 </html>
